--- a/frontend/src/app/features/dashboard/pages/dashboard-page/dashboard-page.html
+++ b/frontend/src/app/features/dashboard/pages/dashboard-page/dashboard-page.html
@@ -42,4 +42,11 @@
       </section>
     }
   </main>
+
+  <app-footer
+    [appName]="'ExamScan'"
+    [version]="'v1.0.0'"
+    [companyName]="'Tu Institución'"
+    [showLinks]="true"
+  />
 </div>
